[package]
name = "aoc"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
rand = "0.8.5"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
lru = "0.12"
kdam = "0.5.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "d08"
harness = false

[[bench]]
name = "d12"
harness = false
